# budget_app_flask

./: .python-version  Transaction.py  app.py  pyproject.toml
budget_app/: __init__.py  auth.py  budget.py  db.py  schema.sql
budget_app/static/: style.css
budget_app/templates/: base.html
budget_app/templates/budget/: add_account.html  index.html  update_account.html
instance/: budget_app.sqlite
tests/: conftest.py  data.sql  test_db.py
